--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     .attribution {
       font-size: 11px;
       text-align: center;
-      display: none;
+      /* display: none; */
+      position: absolute;
+      bottom: 10px;
+      min-width: 100%
     }
 
     .attribution a {
@@ -77,10 +80,10 @@
 
       </div>
   </main>
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="#">John Carruthers</a>.
+  </div>
 </body>
 
 </html>
