--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">John Carruthers</a>.
+    Coded by <a href="https://github.com/techyjc/faq-accordion-main.git">John Carruthers</a>.
   </div>
 </body>
 
