Question as button Trigger

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="faq-section">
 
         <div class="faq-action-section">
-          <div class="faq-question">What is Frontend Mentor, and how will it help me?</div>
+          <div class="faq-question" aria-controls="faq1">What is Frontend Mentor, and how will it help me?</div>
             <div class="action-btn" aria-controls="faq1"></div>
           </div>
 
@@ -50,7 +50,7 @@
         <div class="faq-section">
 
           <div class="faq-action-section">
-            <div class="faq-question">Is Frontend Mentor free?</div>
+            <div class="faq-question" aria-controls="faq2">Is Frontend Mentor free?</div>
             <div class="action-btn" aria-controls="faq2"></div>
           </div>
 
@@ -60,7 +60,7 @@
         <div class="faq-section">
 
           <div class="faq-action-section">
-            <div class="faq-question">Can I use Frontend Mentor projects in my portfolio?</div>
+            <div class="faq-question" aria-controls="faq3">Can I use Frontend Mentor projects in my portfolio?</div>
             <div class="action-btn" aria-controls="faq3"></div>
           </div>
 
@@ -70,7 +70,7 @@
         <div class="faq-section">
 
           <div class="faq-action-section">
-            <div class="faq-question">How can I get help if I'm stuck on a Frontend Mentor challenge?</div>
+            <div class="faq-question" aria-controls="faq4">How can I get help if I'm stuck on a Frontend Mentor challenge?</div>
             <div class="action-btn" aria-controls="faq4"></div>
           </div>
 
